--- a/styles.css
+++ b/styles.css
@@ -480,7 +480,7 @@ footer {
 
 #footer-ds a:hover { 
     color: #00aced;
-    transition: color 0.64ºs;
+    transition: color 0.6s;
 }
 
 
@@ -496,7 +496,7 @@ footer {
     font-family: 'Dawning of a New Day', cursive;
     text-align: center;
     font-weight: 300;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     color: #ddd;
     padding-bottom: 1rem;
 }
