divider en rojo

--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ ul {
 .divider {
         display: block;
         height: 2px;
-        background-color: #204acf;
+        background-color: #ff1e03;
         content: " ";
         width: 100px;
         margin: 0 auto;
