--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ ul {
 /*--------------------------------------------- */
 
 .row {
-    max-width: 1300px;
+    max-width: 90%;
     margin: 0 auto;
     
 }
@@ -69,17 +69,8 @@ ul {
     padding: 1%;
 }
 
-.btn-clear {
-    border: 2px solid #204acf;
-    background-color: #fff;
-    color: #000;
-    
-}
+section {padding: 80px 0;}
 
-.btn-full {
-    
-    background-color: #204acf;
-}
 
 .section-title {
     padding: 3rem 1rem 0;
@@ -106,7 +97,7 @@ ul {
         content: " ";
         width: 100px;
         margin: 0 auto;
-        margin-top: 30px;
+        margin-bottom: 2rem;
 }
 
 .divider-white {
@@ -116,81 +107,33 @@ ul {
     content: " ";
     width: 100px;
     margin: 0 auto;
-    margin-top: 30px;
+    margin-bottom: 2rem;
 }
-
-
-
-
 
 /*--------------------------------------------- */
-/*                   NAV BAR                    */
+/*                   BUTTONS                    */
 /*--------------------------------------------- */
 
-
-.logo {
-    width: 6rem;
-}
-
-.nav-item {
-    padding-right: 3.5rem;
-    font-weight: 200;
-}
-
-.nav-item a:hover {
-    border-bottom: 2px solid #204acf;
-}
-
-.navbar { padding: 0 0 0.2rem;}
-
-
-
-/*--------------------------------------------- */
-/*                  HERO                        */
-/*--------------------------------------------- */
-
-
-
-.fullscreen-bg {
-    
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    overflow: hidden;
-    z-index: -100;
-    position: relative;
-}
-
-.fullscreen-bg__video {
-    
-    top: 0;
-    left: 0;
+/* .btn-contact-us {
     width: 100%;
-    height: 100%;
-}
-
-.btn-header {
-    margin: 0 3% 5% 0;
-    width: 10rem; 
-    border-radius: 1rem;
-}
-
-.hero-h1 {
-    margin: 20% 0; 
+    border-radius: 10px;
+    background-color: #204acf;
+    text-transform: uppercase;
+    border: 0 none;
 }
 
 .btn-header-1,
 .btn-header-2 {
     border: 0 none;
     background-color: #204acf;
-    border-radius: 2px;
+    border-radius: 10px;
     position: absolute;
     top: 70%;
     width: 15rem;
     height: 3.5rem;
     text-transform: uppercase;
-    
+    z-index: 2;
+    pointer-events: none
 
 }
 
@@ -200,7 +143,144 @@ ul {
 
 .btn-header-2 {
    left: 53%;
+} */
+
+.btn:link,
+.btn:visited,
+input[type=submit] {
+    display: inline-block;
+    padding: 10px 30px;
+    font-weight: 300;
+    text-decoration: none;
+    border-radius: 12px; 
+    -webkit-transition: background-color 0.3s, border 0.3s, color 0.3s; 
+    transition: background-color 0.3s, border 0.3s, color 0.3s; 
 }
+
+
+.btn-full:link, 
+.btn-full:visited,
+input[type=submit] {
+    background-color: #204acf;
+    border: 1px solid #204acf;
+    color: #fff;
+    margin-right: 15px;
+}
+
+.btn-ghost:link, 
+.btn-ghost:visited {
+    border: 1px solid #204acf;
+    color: #204acf;
+}
+
+.btn:hover,
+.btn:active
+ {
+    background-color: #204acf;
+}
+
+.btn-full:hover, 
+.btn-full:active,
+input[type=submit]:hover,
+input[type=submit]:active {
+    border: 1px solid #204acf;
+    color: #fff;
+}
+
+.btn-ghost:hover, 
+.btn-ghost:active {
+    border: 1px solid #204acf;
+    color: #fff;
+}
+
+.btn-contact-us {width: 100%;}
+
+
+/*--------------------------------------------- */
+/*                   NAV BAR                    */
+/*--------------------------------------------- */
+
+
+.logo {
+    
+    height: 100px;
+    width: auto;
+    float: left;
+    margin-top: 20px;
+}
+
+.logo-black { 
+    display: none; 
+    height: 50px;
+    width: auto;
+    float: left;
+    margin: 5px 0;
+}
+
+
+
+/* Main Nav */
+.navbar li {
+    display: inline-block;
+    margin-left: 40px;
+    color: #fff;
+}
+
+.navbar li a:link, 
+.navbar li a:visited {
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 90%;
+    border-bottom: 2px solid transparent;
+    -webkit-transition: border-botton 0.3s;
+    transition: border-botton 0.3s;
+}
+
+.navbar li a:hover, 
+.navbar li a:active{
+    
+    border-bottom: 2px solid #204acf;
+    
+}
+
+
+/*--------------------------------------------- */
+/*                  HERO                        */
+/*--------------------------------------------- */
+
+
+#hero {padding: 0;}
+
+header {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(img/hero.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(img/dog-838281_1920.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    background-attachment: fixed;
+}
+
+.hero-text-box {
+    position: absolute;
+    width: 1140px;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+
+.hero-text-box h1, 
+.hero-text-box a {
+    color: #fff;
+    font-weight: 300;
+    text-transform: uppercase;
+}
+
+
+
+
 
 
 /*--------------------------------------------- */
@@ -210,9 +290,13 @@ ul {
 
 #about-us {
     background-color: #fff;
-    padding-bottom: 3rem;
+    padding: 5rem 0;
+    height: 800px;
 }
 
+.about-us-row {
+    padding: 4rem 0;
+}
 
 .about-us-col {
     height: 350px;
@@ -222,8 +306,8 @@ ul {
 }
 
 .about-us-icon {
-    height: 20rem;
-    width: 20rem;
+    height: 400px;
+    width: 400px;
     display: inline-block;
     vertical-align: middle;
     text-align: center;
@@ -317,9 +401,6 @@ ul {
     font-weight: 300;
 }
 
-.texto-nuestros-clientes {
-    padding: 10% 0 0;
-}
 
 /*--------------------------------------------- */
 /*                   CONTACTO                   */
@@ -382,13 +463,7 @@ textarea {
     padding-left: 2.5rem; 
 }
 
-.btn-contact-us {
-    width: 100%;
-    border-radius: 10px;
-    background-color: #204acf;
-    text-transform: uppercase;
-    border: 0 none;
-}
+
 
 
 
