--- a/contacto/styles.css
+++ b/contacto/styles.css
@@ -299,6 +299,8 @@ input[type=submit]:active {
     background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../resources/img/zocalo-cdmx.jpg);  
 }
 
+
+
 .saltillo {
     background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../resources/img/saltillo.png);
 }
@@ -418,12 +420,13 @@ iframe {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: 15px;
+  padding: 45px;
   background: rgba(219,21,99,0.8);
-  background: -webkit-linear-gradient(45deg, rgba(213,0,125,0.8), rgba(53, 79, 229, 0.8));
-  background: -o-linear-gradient(45deg, rgba(213,0,125,0.8), rgba(53, 79, 229, 0.8));
-  background: -moz-linear-gradient(45deg, rgba(213,0,125,0.8), rgba(53, 79, 229, 0.8));
-  background: linear-gradient(45deg, rgba(213,0,125,0.8), rgba(53, 79, 229, 0.8));
+  background: -webkit-linear-gradient(45deg, rgba(1,43,130, 1), rgba(85,141,255, 0.8));
+  background: -o-linear-gradient(45deg, rgba(1,43,130, 1), rgba(85,141,255, 0.8));
+  background: -moz-linear-gradient(45deg, rgba(1,43,130, 1), rgba(85,141,255, 0.8));
+  background: linear-gradient(45deg, rgba(1,43,130, 1), rgba(85,141,255, 0.8));
+  
 }
 
 .wrap-contact2 {
@@ -587,10 +590,10 @@ textarea.input2 + .focus-input2::after {
   width: 300%;
   height: 100%;
   background: rgba(219,21,99,1);
-  background: -webkit-linear-gradient(-135deg, #d5007d, #e53935, #d5007d, #e53935);
-  background: -o-linear-gradient(-135deg, #d5007d, #e53935, #d5007d, #e53935);
-  background: -moz-linear-gradient(-135deg, #d5007d, #e53935, #d5007d, #e53935);
-  background: linear-gradient(-135deg, #d5007d, #e53935, #d5007d, #e53935);
+  background: -webkit-linear-gradient(-135deg, #558dff, #1A3C82, #558dff, #1A3C82);
+  background: -o-linear-gradient(-135deg, #558dff, #1A3C82, #558dff, #1A3C82);
+  background: -moz-linear-gradient(-135deg, #558dff, #1A3C82, #558dff, #1A3C82);
+  background: linear-gradient(-135deg, #558dff, #1A3C82, #558dff, #1A3C82);
   top: 0;
   left: -100%;
 
