--- a/resources/styles.css
+++ b/resources/styles.css
@@ -281,8 +281,8 @@ header {
       to(rgba(0, 0, 0, 0.7))
     ),
     url(img/hero.jpg);
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url(img/dog-838281_1920.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url(img/hero-meh-2.png);
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -423,12 +423,10 @@ header {
   padding-bottom: 5%;
 }
 
-.img-contacto {
-  background-image: url(img/backgroun-contacto.png);
-  background-size: cover;
-  background-position: center;
-  height: 3rem;
+#contact .row {
+  max-width: 100%;
 }
+
 
 .contact-2 {
   padding-top: 3rem;
@@ -439,9 +437,6 @@ header {
   text-transform: uppercase;
 }
 
-#contact .row {
-  max-width: 90%;
-}
 
 .form-box {
   padding-bottom: 1.5rem;
@@ -463,6 +458,10 @@ textarea {
 
 textarea {
   height: 100px;
+}
+
+.cuadro-ubicaciones {
+  padding-top: 18%;
 }
 
 .ubicaciones h4 {
