foto de contact us

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -280,7 +280,7 @@ header {
       from(rgba(0, 0, 0, 0.7)),
       to(rgba(0, 0, 0, 0.7))
     ),
-    url(img/hero.jpg);
+    url(img/hero-meh-2.png);
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
     url(img/hero-meh-2.png);
   background-size: cover;
@@ -421,6 +421,10 @@ header {
 
 #contact {
   padding-bottom: 5%;
+  background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)),
+    url(img/bg-contact-us.png);
+  background-size: cover;
+  background-position: center;
 }
 
 #contact .row {
@@ -461,7 +465,7 @@ textarea {
 }
 
 .cuadro-ubicaciones {
-  padding-top: 18%;
+  padding-top: 8%;
 }
 
 .ubicaciones h4 {
