--- a/resources/queries.css
+++ b/resources/queries.css
@@ -41,20 +41,129 @@
 }
 
 /* Small tablet to big tablet - from 768 to 1023px */
+
+
 @media only screen and (max-width: 1023px) {
+    html { font-size: 14px; }
+    
     .hero-text-box h1 {
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
 
-    .hero-text-box { padding-left: 15%;}
+    .hero-text-box { padding-left: 18%; }
+}
 
 
 
+
+/* Small phones to small tablets - from 912 to 767 px */
+@media only screen and (max-width: 912px) {
+    html { font-size: 13px; }
+
+    /*   HERO   */
+    
+    .hero-text-box { 
+       margin-left: 22%;
+    }
+
+    .hero-text-box h1 {
+        font-size: 3rem;
+    }
+
+    .btn-header {
+        margin-top: 5%; 
+    }
+
+    .btn-header-1 {
+        margin-left: 10%;
+    }
+
+
+   .section-text {
+       padding-bottom: 10%;
+   } 
+
+
+   /* ABOUT US */
+
+   #about-us {
+       height: 900px;
+   }
+
+   .about-us-icon {
+       padding-bottom: 7%;
+   }
+
+   /*   SOLUCIONES   */
+
+   .soluciones-showcase li {
+        display: block;
+        float: left;
+        width: 50%;
+    }
+
+    /*   CONTACT   */
+
+    #contact, 
+    .contact-2 {
+        padding-top: 0;
+    }
+
+    .mapa {
+        padding: 0 0 10% 0; 
+        height: 60vh;
+    }
+
+    .cuadro-ubicaciones {
+        padding-top: 3%;
+        padding-bottom: 10%;
+    }  
+
+    .contact-form-header {
+        font-size: 300%;
+    } 
+
+    .ciudad {
+        font-size: 3rem;
+    }
+
+    /* CONTACT FORM */
+
+    input[type="text"],
+    input[type="email"],
+    select,
+    textarea {
+        width: 100%;
+        padding: 7px;
+        border-radius: 10px;
+        border: 1px solid rgb(114, 114, 114);
+    }
+
+    /* FOOTER  */
+    
+    .footer-nav {
+        font-size: 150%;
+    } 
+
+    .social-links {
+        font-size: 150%;
+    }
+
+    .footer-1-row {
+        padding-bottom: 3%;
+    }
 
 
 }
 
 
+
+
+
+
+/* Small phones to small tablets - from 481 to 767 px */
+@media only screen and (max-width: 767px) {
+}
 
 
 
